# bot_cripto

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT_QUANT_20260221.md  BOT-CRIPTO.txt  BOT_CRIPTO_MASTER_GUIDE.md  Entrar vps.txt  README.md  SENIOR_AUDIT_REPORT_20260219.md  SENIOR_STATUS_REPORT.md  connect_vps.ps1  connect_vps.sh  monitor_training.py  prepare_pod_data.py  pyproject.toml  telegram_monitor.py  test_runpod.py  tft_optimized.py  vps.py
.claude/: settings.local.json
.claude/commands/: crypto-analyst.md  senior-review.md
.codex/skills/bc-advanced-evaluation/: SKILL.md
.codex/skills/bc-backtesting-drift/: SKILL.md
.codex/skills/bc-data-ingestion-storage/: SKILL.md
.codex/skills/bc-dockerization/: SKILL.md
.codex/skills/bc-ensemble-regime-risk/: SKILL.md
.codex/skills/bc-feature-engineering/: SKILL.md
.codex/skills/bc-functional-roadmap/: SKILL.md
.codex/skills/bc-inference-decision-paper/: SKILL.md
.codex/skills/bc-k3s-manifests/: SKILL.md
.codex/skills/bc-linux-native-ops/: SKILL.md
.codex/skills/bc-model-api-baseline/: SKILL.md
.codex/skills/bc-pipeline-smoke-linux/: SKILL.md
.codex/skills/bc-qa-documentation/: SKILL.md
data/raw/: BTC_USD_1h.parquet  BTC_USD_micro_snapshots.parquet
docker/: .gitkeep  Dockerfile.infer  Dockerfile.train
docs/: .gitkeep  ARCHITECTURE.md  COMO_FUNCIONA_TODO.md  COMPASS_CHECKLIST_EXECUTION.md  CREDENTIALS_TEMPLATE.md  IMPROVEMENTS_APPLIED.md  RUNBOOK_OPERACIONES.md  SECURITY.md  SENIOR_AUDIT.md  SENTIMENT_STACK_IMPLEMENTABLE_PLAN.md  SENTIMENT_STACK_IMPLEMENTATION.md  WATCHTOWER.md  compass_artifact_wf-0236a179-93b4-4a8c-839c-fca4f8544090_text_markdown.md  sentiment-stack-mejorado.md
k8s/: .gitkeep  00-namespace-rbac.yaml  01-pvc.yaml  02-configmap.yaml  03-secret.example.yaml  04-jobs.yaml  05-cronjobs.yaml
scripts/: .gitkeep  binance_orderbook.php  bootstrap_local.sh  bootstrap_local_windows.ps1  bot.ps1  build_and_push.sh  connect_runpod.ps1  cycle_fetch_features_infer.sh  deploy_auto.py  deploy_linux_native.sh  generate_dummy_data.py  k8s_apply_all.sh  pipeline_all_downloaded.sh  retrain_daily.sh  run_api_smoke.ps1  run_api_smoke.sh  run_phase2_sota.sh  run_pipeline_local.sh  runpod_backup_incremental.ps1  runpod_monitor_ensure.sh  runpod_monitor_guard.sh  runpod_monitor_install_autostart.sh  smoke_linux.sh  vps_check.py
src/bot_cripto/: __init__.py  cli.py
systemd/: bot-cripto-inference.service  bot-cripto-inference.timer  bot-cripto-retrain.service  bot-cripto-retrain.timer  bot-cripto.logrotate  install_systemd.sh  install_user_systemd.sh
systemd/user/: bot-cripto-inference.service  bot-cripto-inference.timer  bot-cripto-retrain.service  bot-cripto-retrain.timer  bot-cripto-telegram-control.service
tests/: test_allocation_blend.py  test_api_smoke.py  test_backtesting.py  test_backtesting_purged_cv.py  test_baseline.py  test_calibration.py  test_champion_challenger.py  test_concept_drift.py  test_config.py  test_data_adapters.py  test_decision.py  test_drift.py  test_dual_pipeline.py  test_ensemble.py  test_env_tools.py  test_features.py  test_hrp.py  test_inference_context.py  test_inference_kelly_dynamic.py  test_inference_quant_domain.py  test_ingestion.py  test_jobs_common.py  test_live_executor.py  test_market_layers.py  test_meta_cpcv.py  test_meta_metrics_store.py  test_meta_model.py  test_microstructure_sentiment_fusion.py  test_model_benchmark.py  test_models_contract.py  test_paper_executor.py  test_performance_store.py  test_phase1_kpi.py  test_phase2_sota.py  test_quant_signals.py  test_regime.py  test_retrain_orchestrator.py  test_risk_engine.py  test_risk_state_store.py  test_sentiment_nlp.py  (+7 more)
(+148 files in other folders)
