[project]
name = "bot-cripto"
version = "0.1.0"
description = "Sistema de predicción de mercado cripto BTC/USDT con arquitectura modular"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Bot Cripto Team" }]

dependencies = [
    "ccxt>=4.0.0",
    "filelock>=3.15.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.1.0",
    "typer>=0.9.0",
    "pyarrow>=14.0.0",
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "pytorch-forecasting>=1.0.0",
    "yfinance>=0.2.50",
]

[project.optional-dependencies]
tft = [
    "torch>=2.0",
    "pytorch-forecasting>=1.0",
    "pytorch-lightning>=2.0",
]
dev = [
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.6",
    "pandas-stubs>=2.0",
]
ui = [
    "streamlit>=1.37.0",
    "yfinance>=0.2.50",
]
nlp = [
    "transformers>=4.44.0",
]
stream = [
    "cryptofeed>=2.4.1",
]
forecast = [
    "neuralforecast>=1.7.0",
]
online = [
    "river>=0.22.0",
]

[project.scripts]
bot-cripto = "bot_cripto.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ──────────────────────────────────────────────
# Ruff — linter ultrarrápido
# ──────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "S101", # allow assert in tests
    "S607", # allow partial executable path (git via PATH)
    "S603", # allow subprocess call with shell=False (default)
]

[tool.ruff.lint.isort]
known-first-party = ["bot_cripto"]

# ──────────────────────────────────────────────
# Black — formatter
# ──────────────────────────────────────────────
[tool.black]
target-version = ["py311"]
line-length = 100

# ──────────────────────────────────────────────
# Mypy — type checking estricto
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["ccxt.*", "pytorch_forecasting.*", "pytorch_lightning.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["joblib", "sklearn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["streamlit", "yfinance"]
ignore_missing_imports = true

# ──────────────────────────────────────────────
# Pytest
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers -m \"not integration\""
filterwarnings = [
    "ignore:Attribute 'loss' is an instance of `nn.Module`.*:UserWarning",
    "ignore:Attribute 'logging_metrics' is an instance of `nn.Module`.*:UserWarning",
    "ignore:.*LeafSpec.*deprecated.*:DeprecationWarning",
    "ignore:Consider setting `persistent_workers=True` in '.*_dataloader'.*:UserWarning",
    "ignore::UserWarning:lightning\\.pytorch\\.utilities\\._pytree",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
